# AutoOutreach

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  config.py  errors.py  logging.py  models.py  pipeline.py
app/clients/: __init__.py  base.py  brevo.py  eazyreach.py  mock.py  ocean.py  prospeo.py
app/services/: __init__.py  dedupe.py  discovery.py  email_copy.py  enrichment.py  reporting.py  safety.py  storage.py  validators.py
app/templates/: outreach_email.html.j2  outreach_email.txt.j2
tests/: test_dedupe.py  test_email_copy.py  test_ocean.py  test_pipeline_mock.py  test_prospeo.py  test_safety.py  test_validators.py
